# python-profiling-demo

./: .gitignore  README.md  pyproject.toml
demo/: cli.py  help.py  memory.py  time.py
