[project]
name = "profiling-demo"
version = "0.1.0"
description = "Demo programs showing time and memory profiling with pyinstrument and memray"
requires-python = ">=3.13"
dependencies = [
    "memray>=1.19.1",
    "pyinstrument>=5.1.2",
    "rich>=14.3.3",
]

[project.scripts]
python-profile-demo = "demo.cli:main"

[tool.uv]
package = true
